# hasktorch-skeleton

./: .gitignore  README.md  cabal.project  default.nix  flake.nix  hasktorch-skeleton.cabal  hie.yaml  plot.html  shell.nix  stack.yaml
.github/workflows/: nix-linux.yml  nix-macos.yml  stack-nix-linux.yml
exe/: Main.hs
nix/: default.nix  haskell.nix  pkgs.nix  sources.json  stack-shell.nix
nix/overlays/: libtorch.nix
src/: HasktorchSkeleton.hs
two-layer-network/: two-layer-network.cabal
two-layer-network/src/: Main.hs
