cabal-version:       2.1
name:                hasktorch-skeleton
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              The Hasktorch Team
maintainer:          hasktorch@gmail.com
copyright:           2020 The Hasktorch Team
category:            Tensors, Machine Learning, AI
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.3

library
  hs-source-dirs:    src
  exposed-modules:   HasktorchSkeleton

  build-depends:     base >= 4.7 && < 5
                   , hasktorch >= 0.2 && < 0.3
                     
  ghc-options:       -Wall

  default-language:  Haskell2010
