cabal-version:       2.1
name:                hasktorch-skeleton
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              The Hasktorch Team
maintainer:          hasktorch@gmail.com
copyright:           2020 The Hasktorch Team
category:            Tensors, Machine Learning, AI
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.4

library
  hs-source-dirs:    src
  exposed-modules:   HasktorchSkeleton

  build-depends:     base >= 4.7 && < 5
                   , hasktorch >= 0.2 && < 0.3
                   , ihp
                   , base
                   , classy-prelude
                   , directory
                   , free
                   , string-conversions
                   , warp
                   , wai
                   , mtl
                   , blaze-html
                   , blaze-markup
                   , wai-extra
                   , wai
                   , HTTP
                   , http-types
                   , blaze-html
                   , mtl
                   , inflections
                   , text
                   , postgresql-simple
                   , wai-middleware-static
                   , wai-util, http-conduit
                   , tagsoup
                   , http-client
                   , bytestring
                   , network-uri
                   , aeson
                   , wai-session
                   , wai-session-clientsession
                   , clientsession
                   , pwstore-fast
                   , vault
                   , data-default
                   , linklater
                   , random-strings
                   , uuid
                   , time
                   , parsec
                     
  ghc-options:       -Wall

  default-language:  Haskell2010

  default-extensions: OverloadedStrings
                    , NoImplicitPrelude
                    , ImplicitParams
                    , RankNTypes
                    , NamedFieldPuns
                    , TypeSynonymInstances
                    , FlexibleInstances
                    , DisambiguateRecordFields
                    , DuplicateRecordFields
                    , OverloadedLabels
                    , FlexibleContexts
                    , DataKinds
                    , TypeApplications
